[tool.poetry]
name = "python_initialization"
version = "0.1.0"
description = ""
authors = ["mkt3 <mkt3rb@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
jedi = "^0.16.0"
rope = "^0.16.0"
flake8 = "^3.7.9"
autopep8 = "^1.5"
yapf = "^0.29.0"
isort = "^4.3.21"
ipykernel = "^5.1.4"
hydra-core = "^0.11.3"
mlflow = "^1.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
