[tool.poetry]
name = "python-project-template"
version = "0.1.0"
description = ""
authors = ["mkt3 <mkt3rb@gmail.com>"]

[tool.poetry.dependencies]
python = "=3.8.9"

[tool.poetry.dev-dependencies]
kedro = "^0.17.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
